# Ornament

./: README.md  user.sql  user_1.sql
Ornament/: CMakeLists.txt  main.cpp  res.qrc
Ornament/QuickFramelessWindow/: QuickFramelessView.cpp  QuickFramelessView.h  QuickFramelessWindow.cpp  QuickFramelessWindow.h
Ornament/include/: Client.h  ConnectServer.h  ImageLoader.h  Login.h  UserDatabaseManager.h  global.h
Ornament/resource/: window_ico.rc
Ornament/resource/qml/: ChatContainer.qml  ChatDefaultContainer.qml  ChatMessageDelegate.qml  ContentContainer.qml  FeatureBar.qml  FeatureButton.qml  FriendContainer.qml  HomeContainer.qml  LockItem.qml  LoginContainer.qml  Main.qml  MusicComponent.qml  OclockItem.qml  RadiusGlassEffect.qml  RadiusMaoboliEffect.qml  RegisterContainer.qml  RoundImage.qml  TitleBar.qml  TitleToolButton.qml
Ornament/src/: Client.cpp  ConnectServer.cpp  ImageLoader.cpp  Login.cpp  QuickFramelessView.cpp  UserDatabaseManager.cpp  global.cpp
Ornament2.0/: CMakeLists.txt  Resource.qrc  cpp.hint  framelesswindow.cpp  framelesswindow.h  global.cpp  global.h  main.cpp
Ornament2.0/ChatPage/include/: ChatPage.h  ChatWindow.h  DefaultWindow.h  EmojiViewer.h  FileQueueList.h  FriendChatList.h
Ornament2.0/ChatPage/src/: ChatPage.cpp  ChatWindow.cpp  DefaultWindow.cpp  EmojiViewer.cpp  FileQueueList.cpp  FriendChatList.cpp
Ornament2.0/Component/include/: ImageViewer.h  LineEdit.h  NormalTitleBar.h  Notification.h  RoundImage.h  SystemNotification.h  SystemTrayIconNotification.h  smoothlistwidget.h
Ornament2.0/Component/src/: ImageViewer.cpp  LineEdit.cpp  NormalTitleBar.cpp  Notification.cpp  RoundImage.cpp  SystemNotification.cpp  SystemTrayIconNotification.cpp  smoothlistwidget.cpp
Ornament2.0/FramelessWindow/include/: framelesswindow.h
Ornament2.0/FramelessWindow/src/: framelesswindow.cpp
Ornament2.0/FriendPage/include/: FriendInfo.h  FriendList.h  FriendPage.h
Ornament2.0/FriendPage/src/: FriendInfo.cpp  FriendList.cpp  FriendPage.cpp
Ornament2.0/Login/Component/include/: ButtonComponent.h  LineEditComponent.h
Ornament2.0/Login/Component/src/: ButtonComponent.cpp  LineEditComponent.cpp
Ornament2.0/Login/Register/include/: RegisterUserAccount.h
Ornament2.0/Login/Register/src/: RegisterUserAccount.cpp
Ornament2.0/Login/include/: Login.h  LoginTitleBar.h
Ornament2.0/Login/src/: Login.cpp  LoginTitleBar.cpp
Ornament2.0/Resource/: ico.rc
Ornament2.0/StyledItemDelegate/include/: FeatureBarDelegate.h  FileQueueItemWidget.h  FriendChatDelegate.h  FriendListDelegate.h  MessageDelegate.h  MessageItemWidget.h  SearchFriendDelegate.h  SearchFriendItemWidget.h  SystemNotificationDelegate.h  UserApplicationItemWidget.h
Ornament2.0/StyledItemDelegate/src/: FeatureBarDelegate.cpp  FileQueueItemWidget.cpp  FriendChatDelegate.cpp  FriendListDelegate.cpp  MessageDelegate.cpp  MessageItemWidget.cpp  SearchFriendDelegate.cpp  SearchFriendItemWidget.cpp  SystemNotificationDelegate.cpp  UserApplicationItemWidget.cpp
Ornament2.0/UserDataManager/include/: UserDatabaseManager.h
Ornament2.0/UserDataManager/src/: UserDatabaseManager.cpp
Ornament2.0/include/: AddFriend.h  ApplicationFeaureBar.h  ApplicationTitleBar.h  ChatNetworkManager.h  FileWork.h  IconWithRedPoint.h  OnlineStatus.h  Ornament.h  SystemTrayIconNotification.h  TitleTool.h
Ornament2.0/src/: AddFriend.cpp  ApplicationFeaureBar.cpp  ApplicationTitleBar.cpp  ChatNetworkManager.cpp  FileWork.cpp  IconWithRedPoint.cpp  OnlineStatus.cpp  Ornament.cpp  TitleTool.cpp
OrnamentServer2.0/: CMakeLists.txt  cpp.hint  main.cpp
OrnamentServer2.0/include/: ClientWork.h  FileTcpServer.h  FileWork.h  OrnamentServer.h  TcpServer.h  UserDatabaseManager.h  global.h
OrnamentServer2.0/src/: ClientWork.cpp  FileTcpServer.cpp  FileWork.cpp  OrnamentServer.cpp  TcpServer.cpp  UserDatabaseManager.cpp  global.cpp
QuickFramelessWindow/: CMakeLists.txt  Main.qml  QuickFramelessWindow.cpp  QuickFramelessWindow.h  main.cpp  res.qrc
